fix banner image overlapping with note properties text in LIve Preview mode

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@
 .pixel-banner-image ~ div {
     z-index: 1;
 }
+.cm-sizer .metadata-container,
+.markdown-preview-sizer .metadata-container {
+    z-index: 1;
+}
 .cm-sizer,
 .markdown-preview-sizer {
     display: flex;
